--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,24 @@
-DATABASE=test_db
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-JWT_SECRET=mydevsecret
+# JWT Auth Credentials
+
+JWT_SECRET=
+ISSUER=
+
+# Database Credentials
+# Provide either the DATABASE_URL or a combination of
+# DB_USERNAME, DB_PASSWORD and DATABASE
+
+DATABASE_URL=
+DB_USERNAME=
+DB_PASSWORD=
+DATABASE=
+
+# Test Database Credentials (For test)
+
+TEST_DB_USERNAME=
+TEST_DB_PASSWORD=
+TEST_DATABASE=
+
+# Others
+# If you don't specify a value for port, it defaults to 3000
+
+PORT=
