chore: Refactor and update code to run migrations on deployed apps
[Finishes #159722371]

--- a/.env-sample
+++ b/.env-sample
@@ -1,24 +1,27 @@
 # JWT Auth Credentials
-
+[Required]
 JWT_SECRET=
 ISSUER=
 
 # Database Credentials
-# Provide either the DATABASE_URL or a combination of
+# Provide either a database url or a combination of
 # DB_USERNAME, DB_PASSWORD and DATABASE
 
-DATABASE_URL=
+# If you provide a database url, then you have to specify the environment
+# variable name as value to USE_DATABASE_URL
+# e.g
+USE_DATABASE_URL = A_DATABASE_URL
+A_DATABASE_URL = postgres://username:password@host:port/database_name
+
 DB_USERNAME=
 DB_PASSWORD=
 DATABASE=
 
 # Test Database Credentials (For test)
-
 TEST_DB_USERNAME=
 TEST_DB_PASSWORD=
 TEST_DATABASE=
 
 # Others
 # If you don't specify a value for port, it defaults to 3000
-
 PORT=
